configuração do banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=todolist-challenge
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/todolist
+spring.datasource.username=todolist
+spring.datasource.password=todolist
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+server.port=8080
